--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ capybara-*.html
 /tmp
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/schema.rb
+/log/development.log
 /public/system
 /coverage/
+/tmp/pids/server.pid
 /spec/tmp
 *.orig
 rerun.txt
